[gd_scene load_steps=4 format=3 uid="uid://bas6iuo8ip1uf"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_58jsn"]
[ext_resource type="PackedScene" uid="uid://bgmqu6bbft2s" path="res://scenes/game_title.tscn" id="2_guk6g"]
[ext_resource type="PackedScene" uid="uid://cqf8bx086jorq" path="res://scenes/quit_to_desktop_button.tscn" id="3_368l1"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_58jsn")

[node name="MainMenuUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" parent="MainMenuUI" instance=ExtResource("2_guk6g")]
layout_mode = 0
offset_left = 520.0
offset_top = 78.0
offset_right = 1400.0
offset_bottom = 190.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.345
anchor_top = 0.355
anchor_right = 0.655
anchor_bottom = 0.797
offset_left = -0.400024
offset_top = -0.400024
offset_right = 0.399902
offset_bottom = 0.239929
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="PlaySPButton" type="Button" parent="MainMenuUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../QuitToDesktopButton")
focus_neighbor_top = NodePath("../QuitToDesktopButton")
focus_neighbor_right = NodePath("../PlayLocalMPButton")
focus_neighbor_bottom = NodePath("../PlayLocalMPButton")
focus_next = NodePath("../PlayLocalMPButton")
focus_previous = NodePath("../QuitToDesktopButton")
text = "Singleplayer"

[node name="PlayLocalMPButton" type="Button" parent="MainMenuUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../PlaySPButton")
focus_neighbor_top = NodePath("../PlaySPButton")
focus_neighbor_right = NodePath("../QuitToDesktopButton")
focus_neighbor_bottom = NodePath("../QuitToDesktopButton")
focus_next = NodePath("../QuitToDesktopButton")
focus_previous = NodePath("../PlaySPButton")
text = "Local Multiplayer"

[node name="QuitToDesktopButton" parent="MainMenuUI/VBoxContainer" instance=ExtResource("3_368l1")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../PlayLocalMPButton")
focus_neighbor_top = NodePath("../PlayLocalMPButton")
focus_neighbor_right = NodePath("../PlaySPButton")
focus_neighbor_bottom = NodePath("../PlaySPButton")
focus_next = NodePath("../PlaySPButton")
focus_previous = NodePath("../PlayLocalMPButton")

[connection signal="pressed" from="MainMenuUI/VBoxContainer/PlaySPButton" to="." method="_on_play_sp_button_pressed"]
[connection signal="pressed" from="MainMenuUI/VBoxContainer/PlayLocalMPButton" to="." method="_on_play_local_mp_button_pressed"]
